docs(user): Add new user endpoints docs
Added swagger documentations for following endpoints:
- GetDeletedUsers
- DeleteUser
- PermanentDeleteUser
